# MapReduceMLOps

./: .dvcignore  .gitignore  Makefile  README.md  app.py  dvc.yaml  pyproject.toml  requirements-simple.txt  requirements.txt  system_structure.puml
config/: config.yaml
data/raw/: .gitignore  test.csv.dvc  train.csv.dvc  unsupervised.csv.dvc
docker/: Dockerfile  docker-compose.yml
scripts/: demo.py  evaluate.py  predict.py  predict_pytorch.py  train.py  train_hybrid.py  train_pytorch.py
src/: __init__.py
src/config/: settings.py
src/data/: loader.py  pytorch_loader.py
src/models/: pytorch_models.py  pytorch_trainer.py  trainer.py
src/processing/: mapreduce.py
src/utils/: logger.py  mlflow_utils.py  spark_utils.py
templates/: index.html
tests/: test_data_loader.py  test_mapreduce.py
